--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class='baner'></div>
 <!--message to self-->
   <footer id="footer">
-    <p>Website made by San Dee.</p>
+    <p>Website by San Dee.</p>
   </footer>
 </body>
 </html>
