--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <img src="images/shorthardassetprotection.jpg">
 <div class='baner'></div>
 <!--message to self-->
+<section>
+<p>Hard Asset Protection was created with the current financial market in mind. Many retail investors are looking for ways to be able to hedge against risk. The big risk is the volatility in the market The velocity of change has increased dramatically. The swings and fluctuations are at historical highs. Real assets, commodities, real estate, infrastructure, are some alternatives to consider.  Creating a strategy for these assets are essential. Know what you own and how it is expected to perform. Create a plan and stick to it. Commodities can offer protection against inflation.</p>
+</section>
+
+<aside>
+<a href="http://www.MarketWatch.com" target="_blank">
+  <img src="images/marketwatch.png">
+</a>
+<a href="https://www.facebook.com/Hard-Asset-Protection-687339461365925/" target="_blank">
+  <img src="images/facebook.png">
+</a>
+</aside>
+
   <footer id="footer">
-    <p>Website by San Dee.</p>
+    <p>Website by San Dee.
+    Photo Credit Pixabay</p>
   </footer>
 </body>
 </html>
